# kws_cli

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
demo/: demo.py
demo/wav/: demo.py
include/: fbank.h
src/: fbank.c  kws_cli.c
